--- a/style.css
+++ b/style.css
@@ -9,3 +9,9 @@
 html, body, #mapContainer {
     height: 100%;
 }
+
+.searchView {
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0 1rem;
+}
